<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/questionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/question_label"
        android:textColor="@color/textColor"
        android:textSize="@dimen/question_text_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/circle_progress_bar_shape"
            android:indeterminate="false"
            android:max="30"
            android:progress="30"
            android:progressDrawable="@drawable/circle_progress_bar" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/timer"
            android:textColor="@color/textColor"
            android:textSize="@dimen/clock_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_weight="2"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/question"
            android:textColor="@color/textColor"
            android:textSize="@dimen/question_text_size" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <RadioButton
                android:id="@+id/answer_one_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/textColor"
                android:text="@string/answer1" />

            <RadioButton
                android:id="@+id/answer_two_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/textColor"
                android:text="@string/answer2" />

            <RadioButton
                android:id="@+id/answer_three_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/textColor"
                android:text="@string/answer3" />

            <RadioButton
                android:id="@+id/answer_four_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/textColor"
                android:text="@string/answer4" />
        </RadioGroup>

        <Button
            android:id="@+id/apply_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/button_text"
            android:textColor="@color/textColor"
            android:textSize="@dimen/main_text" />
    </LinearLayout>
</LinearLayout>