<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.g.quizzz.MainActivity">

    <TextView
        android:id="@+id/quiz_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text="@string/info"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="@dimen/main_text" />

    <TextView
        android:id="@+id/question_nr_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/question_nr_label"
        android:textColor="@color/textColor"
        android:textSize="@dimen/labels_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ch_topic_height"
        android:gravity="center">

        <Button
            android:id="@+id/dec_questions"
            android:layout_width="@dimen/small_buttons"
            android:layout_height="@dimen/small_buttons"
            android:backgroundTint="@color/colorAccent"
            android:text="-"
            android:textColor="@color/textColor"
            android:textSize="@dimen/main_text" />

        <TextView
            android:id="@+id/question_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_nr"
            android:textColor="@color/textColor"
            android:textSize="@dimen/question_choose_size" />

        <Button
            android:id="@+id/inc_questions"
            android:layout_width="@dimen/small_buttons"
            android:layout_height="@dimen/small_buttons"
            android:backgroundTint="@color/colorAccent"
            android:text="+"
            android:textColor="@color/textColor"
            android:textSize="@dimen/main_text" />
    </LinearLayout>

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="@dimen/summary_button_height"
        android:layout_marginTop="@dimen/button_custom_margin_top_bottom"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/start_button"
        android:textColor="@color/textColor"
        android:textSize="@dimen/main_text" />
</LinearLayout>
