<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/summary"
        android:textColor="@color/textColor"
        android:textSize="@dimen/summary_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/scoreg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/score"
            android:textColor="@color/textColor"
            android:textSize="@dimen/summary_score" />

        <TextView
            android:id="@+id/scoresplit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="/"
            android:textColor="@color/textColor"
            android:textSize="@dimen/summary_score" />

        <TextView
            android:id="@+id/scorem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/score"
            android:textColor="@color/textColor"
            android:textSize="@dimen/summary_score" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/summary_button_height"
        android:layout_marginTop="@dimen/button_custom_margin_top_bottom"
        android:backgroundTint="@color/colorAccent"
        android:onClick="Redo"
        android:text="@string/summary_button"
        android:textColor="@color/textColor"
        android:textSize="@dimen/main_text" />
</LinearLayout>